--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,34 @@
 {
-    "manifest_version": 2,
-    "name": "Velocity Handler",
-    "version": "1.0",
-    "permissions": ["activeTab", "storage", "webNavigation", "webRequestBlocking", "http://*/*", "https://*/*", "storage", "tabs"],
-    "background": {
-      "scripts": ["background.js"],
-      "persistent": false
+  "manifest_version": 2,
+  "name": "Velocity Handler",
+  "version": "1.0",
+  "permissions": [
+    "activeTab",
+    "storage",
+    "webNavigation",
+    "webRequest",
+    "webRequestBlocking",
+    "proxy",
+    "tabs",
+    "unlimitedStorage",
+    "<all_urls>"
+  ],
+  "background": {
+    "page": "background.html",
+    "persistent": true
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "all_frames": true,
+      "js": ["main.js"]
     },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "all_frames": true,
-        "js": ["main.js"]
-      }
-    ]
-  }
-  
+    {
+      "matches": ["*://*/*"],
+      "all_frames": true,
+      "match_about_blank": true,
+      "run_at": "document_start",
+      "js": ["fonts.js"]
+    }
+  ]
+}
